2015-03-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Send QUIT to chunker after receiving
	  ABORT-FINISHED.

2015-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm (get_exit_status): New method
	* perl/Amanda/Report/json.pm: Add {head}->{exit_status}

2015-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/tape.m4: Add include for bsd.
	* device-src/device.c: Improve message

2015-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/json.pm: Add a timestamp in the head section.
	* installcheck/Amanda_Rest_Runs.pl: Add timestamp.

2015-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Report all size as bytes.
	* installcheck/Amanda_Rest_Runs.pl,
	* server-src/amstatus.pl,
	  installcheck/Amanda_Rest_Runs.pl: Fix for bytes size.

2015-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Runs.pl, perl/Amanda/Status.pm,
	  server-src/amstatus.pl, server-src/driver.c:
	  s/free_kps/network_free_kps/
	  s/free_space/holding_free_space/

2015-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Makefile.am: Do not run the gnutar installcheck

2015-03-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Improve documentation.

2015-03-19  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Fix double g_mutex_unlock.

2015-03-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amindexd.c: Fix LISTHOST command.

2015-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.c (compute_storage_retention): Fix retentionfor
	  retention_days.
	* installcheck/Amanda_Tapelist.pl: Add many installcheck for
	  list_retention, list_no_retention, list_new_tapes and
	  volume_is_reusable

2015-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: One line by worker.

2015-03-06  Jean-Louis Martineau <martineau@zmanda.com>